--- a/venue.html
+++ b/venue.html
@@ -18,9 +18,9 @@
                     </p>
                 </div><!--
 
-                --> <iframe class="col-2-3 venue-map" src="">
-                </iframe>
-                <section>
+                --> <iframe class="col-2-3 " src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7959.811960667358!2d9.690228424150039!3d4.039607038249597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x106112ee6368ee49%3A0x6a334b812e322579!2sBali%2C%20Douala!5e0!3m2!1sen!2scm!4v1583619346435!5m2!1sen!2scm" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                
+               </section>
              <section class="venue-hotel">
                  <div class="col-1-3">
                      <h2>Bali Theatre</h2>
@@ -31,7 +31,7 @@
                  </div><!--
 
                  --><iframe class="col-2-3 venue-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127357.57290853302!2d9.671764043035585!3d4.035900744423692!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1061128be2e1fe6d%3A0x92daa1444781c48b!2sDouala!5e0!3m2!1sen!2scm!4v1583483179411!5m2!1sen!2scm" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-                 </section>
+             </section>
         </div>
     </section>
 </body>
