--- a/venue.html
+++ b/venue.html
@@ -9,29 +9,25 @@
 <body>
     <section class="row">
         <div class="grid">
-             <section class="venue-theatre">
-                <div class="col-1-3">
-                    <h2>Akwa Theatre</h2>
-                    <p>175 N State St <br> Douala, LT 60601</p>
-                    <p><a href="http://www.thechicagotheatre.com/">theakwatheatre.com</a>
-                      <br> (312) 462-6300
-                    </p>
-                </div><!--
-
-                --> <iframe class="col-2-3 " src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7959.811960667358!2d9.690228424150039!3d4.039607038249597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x106112ee6368ee49%3A0x6a334b812e322579!2sBali%2C%20Douala!5e0!3m2!1sen!2scm!4v1583619346435!5m2!1sen!2scm" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-                
-               </section>
-             <section class="venue-hotel">
-                 <div class="col-1-3">
-                     <h2>Bali Theatre</h2>
-                     <p>175 S State Mt <br> Douala, LT 60601</p>
-                     <p><a href="http://www.thechicagotheatre.com/">thebalitheatre.com</a>
+              <section class="venue-theatre">
+                  <div class="col-1-3">
+                       <h2>Akwa Theatre</h2>
+                       <p>175 N State St <br> Douala, LT 60601</p>
+                       <p><a href="http://thechicagotheatre.com/">theakwatheatre.com</a>
                         <br> (312) 462-6300
-                      </p>
-                 </div><!--
-
-                 --><iframe class="col-2-3 venue-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127357.57290853302!2d9.671764043035585!3d4.035900744423692!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1061128be2e1fe6d%3A0x92daa1444781c48b!2sDouala!5e0!3m2!1sen!2scm!4v1583483179411!5m2!1sen!2scm" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-             </section>
+                    </p>
+                  </div><!--
+                  --><iframe class="col-2-3 venue-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15919.351825681553!2d9.692197126808491!3d4.053450102838321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1061125fd8ac86e9%3A0x8c209e5fc42dae26!2sAkwa%20I%2C%20Douala!5e0!3m2!1sen!2scm!4v1583621838612!5m2!1sen!2scm" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+              </section>
+              <section class="venue-hotel">
+                  <div class="col-1-3">
+                      <h2>Serena Hotel</h2>
+                      <p>200 S state <br> Douala, LT 60601</p>
+                      <p><a href="http://serenahotel.com">serenahotel.com</a>
+                    <br> (237) 673159685</p>
+                  </div><!--
+                  --><iframe  class="col-2-3 venue-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7959.811960667358!2d9.690228424150039!3d4.039607038249597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x106112ee6368ee49%3A0x6a334b812e322579!2sBali%2C%20Douala!5e0!3m2!1sen!2scm!4v1583621624739!5m2!1sen!2scm" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+              </section>
         </div>
     </section>
 </body>
