fixed speaker.html issue

--- a/speakers.html
+++ b/speakers.html
@@ -7,66 +7,142 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
 </head>
 <body>
-    <section class="row-alt">
-        <div class=" lead container">
-            <h1>Speakers</h1>
-            <p>We re happy to welcome over twenty speakers to present on the industry&#8217;s latest technologies
-                Prepare for an inspiration extravanganza.
-            </p>
-        </div>
-        <aside class="center">
-            <div class="speaker-info">
-                <img src="assets/images/speakers/shay-howe.jpg" alt="">
-                <ul>
-                    <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
-                    <li><a href="http://learn.shayhowe.com">learn.shayhowe.com</a></li>
-                </ul>
-            </div>
-            
-            <div class="speaker-info">
-                <img src="assets/images/speakers/aj-self.jpg" alt="">
-                <ul>
-                    <li><a href="https://twitter.com/shayhowe">@aj-self</a></li>
-                    <li><a href="http://learn.shayhowe.com">learn.aj-self.com</a></li>
-                </ul>
-            </div>
-            <div class="speaker-info">
-                <img src="assets/images/speakers/brad-smith.jpg" alt="">
-                <ul>
-                    <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
-                    <li><a href="http://learn.shayhowe.com">learn.shayhowe.com</a></li>
-                </ul>
-            </div>
-            <div class="speaker-info">
-                <img src="assets/images/speakers/adam-connor.jpg" alt="">
-                <ul>
-                    <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
-                    <li><a href="http://learn.shayhowe.com">learn.shayhowe.com</a></li>
-                </ul>
-            </div>
-            <div class="speaker-info">
-                <img src="assets/images/speakers/carolyn-chandler.jpg" alt="">
-                <ul>
-                    <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
-                    <li><a href="http://learn.shayhowe.com">learn.shayhowe.com</a></li>
-                </ul>
-            </div>
-            <div class="speaker-info">
-                <img src="assets/images/speakers/darby-frey.jpg" alt="">
-                <ul>
-                    <li><a href="https://twitter.com/princeldrige">@shayhowe</a></li>
-                    <li><a href="http://learn.shayhowe.com">learn.shayhowe.com</a></li>
-                </ul>
-            </div>
-            <div class="speaker-info">
-                <img src="assets/images/speakers/zoe-mickley-gillenwater.jpg" alt="">
-                <ul>
-                    <li><a href="https://twitter.com/apohprince">@shayhowe</a></li>
-                    <li><a href="http://learn.shayhowe.com">learn.shayhowe.com</a></li>
-                </ul>
-            </div>
+  <section class="row" style="background-color:rgb(0, 128, 96)">
+      <div class="grid" >
+     <section id="shay-howe" class="speaker">
+        <div class="col-2-3">
+            <h2>Apoh Prince</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/aaron-irizarry.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@shayhowe</a></li>  
+                    <li><a href="#">learn.shayhowe.com</a></li>
+                  </ul>
+              </div>
         </aside>
+     </section>
+     <section id="shay-howe" class="speaker">
+        <div class="col-2-3">
+            <h2>Prince Eldrige</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/adam-connor.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@shayhowe</a></li>  
+                    <li><a href="#">learn.shayhowe.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="shay-howe" class="speaker">
+        <div class="col-2-3">
+            <h2>Malcom Merlyn</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/aj-self.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@shayhowe</a></li>  
+                    <li><a href="#">learn.shayhowe.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="shay-howe" class="speaker">
+        <div class="col-2-3">
+            <h2>Shay Howe</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/bermon-painter.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@shayhowe</a></li>  
+                    <li><a href="#">learn.shayhowe.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="shay-howe" class="speaker">
+        <div class="col-2-3">
+            <h2>Shay Howe</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/carolyn-chandler.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@shayhowe</a></li>  
+                    <li><a href="#">learn.shayhowe.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="shay-howe" class="speaker">
+        <div class="col-2-3">
+            <h2>Shay Howe</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/jennifer-jones.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@shayhowe</a></li>  
+                    <li><a href="#">learn.shayhowe.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="shay-howe" class="">
+        <div class="col-2-3">
+            <h2>Shay Howe</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/russ-unger.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@shayhowe</a></li>  
+                    <li><a href="#">learn.shayhowe.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
 
-    </section>
+
+
+
+
+
+     </div>
+  </section>
+    
 </body>
 </html>
