--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <header class="container primary-header group">
-        
-         <h1>Styles Conference</h1>
-        
+        <section class="container">
+         <h1 class="logo">Styles Conference</h1>
+        </section>
      <h3 class="tagline">August 24&ndash;26th &mdash; Akwa, Dla</h3>
      <nav class="nav primary-nav">
          <ul>
              <li><a href="index.html">Home</a></li><!--
              --><li><a href="speakers.html">Speakers</a></li><!--
-             --><li><a href="schedule.html">Schedule</a></li><!--
+             --><li><a href="schedules.html">Schedule</a></li><!--
             --><li><a href="venue.html">Venue</a></li><!--
             --><li><a href="register.html">Register</a></li><!--
 
