--- a/speakers.html
+++ b/speakers.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
 </head>
 <body>
-  <section class="row" style="background-color:rgb(0, 128, 96)">
+  <section class="row-alt">
+    <div class="lead container">
+      <h1>Speakers</h1>
+      <p>We are happy to welcome over twenty speakers to present
+        on the industry's latest technologies. Prepare for an inspiration
+        extragavanza
+      </p>
+    </div>
+  </section>
+
+  <section class="row" style="">
       <div class="grid" >
      <section id="shay-howe" class="speaker">
         <div class="col-2-3">
