--- a/venue.html
+++ b/venue.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
 </head>
 <body>
+    <section class="row-alt">
+        <div class="lead container">
+          <h1>Venue</h1>
+          <p>We are happy to welcome over twenty speakers to present
+            on the industry's latest technologies. Prepare for an inspiration
+            extragavanza
+          </p>
+        </div>
+      </section>
     <section class="row">
         <div class="grid">
               <section class="venue-theatre">
