Added more speakers

--- a/speakers.html
+++ b/speakers.html
@@ -25,21 +25,23 @@
             <h5>Less is More: how constraints cultivate growth</h5>
             <p>By setting constraints, we force ourselves..</p>
             <h5>About Shay</h5>
-            <p>As a designer and front-end developper, Shay</p>
+            <p>As a designer and front-end developper, Shay is excited to pass 
+              on his knowledge to fellow developers
+            </p>
         </div><!--
         --><aside class="col-1-3">
               <div class="speaker-info">
                   <img src="assets/images/speakers/aaron-irizarry.jpg" alt="">
                   <ul>
-                    <li><a href="#">@shayhowe</a></li>  
-                    <li><a href="#">learn.shayhowe.com</a></li>
+                    <li><a href="#">@apohprince</a></li>  
+                    <li><a href="#">learn.peldrige.com</a></li>
                   </ul>
               </div>
         </aside>
      </section>
-     <section id="shay-howe" class="speaker">
+     <section id="adam-connor" class="speaker">
         <div class="col-2-3">
-            <h2>Prince Eldrige</h2>
+            <h2>Adam Connor</h2>
             <h5>Less is More: how constraints cultivate growth</h5>
             <p>By setting constraints, we force ourselves..</p>
             <h5>About Shay</h5>
@@ -55,7 +57,7 @@
               </div>
         </aside>
      </section>
-     <section id="shay-howe" class="speaker">
+     <section id="aj-self" class="speaker">
         <div class="col-2-3">
             <h2>Malcom Merlyn</h2>
             <h5>Less is More: how constraints cultivate growth</h5>
@@ -67,15 +69,15 @@
               <div class="speaker-info">
                   <img src="assets/images/speakers/aj-self.jpg" alt="">
                   <ul>
-                    <li><a href="#">@shayhowe</a></li>  
-                    <li><a href="#">learn.shayhowe.com</a></li>
+                    <li><a href="#">@malcom</a></li>  
+                    <li><a href="#">learn.malcommm.com</a></li>
                   </ul>
               </div>
         </aside>
      </section>
-     <section id="shay-howe" class="speaker">
+     <section id="bermon-painter" class="speaker">
         <div class="col-2-3">
-            <h2>Shay Howe</h2>
+            <h2>Bermon Painter</h2>
             <h5>Less is More: how constraints cultivate growth</h5>
             <p>By setting constraints, we force ourselves..</p>
             <h5>About Shay</h5>
@@ -85,8 +87,8 @@
               <div class="speaker-info">
                   <img src="assets/images/speakers/bermon-painter.jpg" alt="">
                   <ul>
-                    <li><a href="#">@shayhowe</a></li>  
-                    <li><a href="#">learn.shayhowe.com</a></li>
+                    <li><a href="#">@bermonp</a></li>  
+                    <li><a href="#">learn.bermonpainter.com</a></li>
                   </ul>
               </div>
         </aside>
@@ -109,9 +111,9 @@
               </div>
         </aside>
      </section>
-     <section id="shay-howe" class="speaker">
+     <section id="jennifer-jones" class="speaker">
         <div class="col-2-3">
-            <h2>Shay Howe</h2>
+            <h2>jennifer-jones</h2>
             <h5>Less is More: how constraints cultivate growth</h5>
             <p>By setting constraints, we force ourselves..</p>
             <h5>About Shay</h5>
@@ -121,15 +123,15 @@
               <div class="speaker-info">
                   <img src="assets/images/speakers/jennifer-jones.jpg" alt="">
                   <ul>
-                    <li><a href="#">@shayhowe</a></li>  
-                    <li><a href="#">learn.shayhowe.com</a></li>
+                    <li><a href="#">@jennijones</a></li>  
+                    <li><a href="#">learn.jennijones.com</a></li>
                   </ul>
               </div>
         </aside>
      </section>
-     <section id="shay-howe" class="">
+     <section id="russ-unger" class="speaker">
         <div class="col-2-3">
-            <h2>Shay Howe</h2>
+            <h2>Russ-Unger</h2>
             <h5>Less is More: how constraints cultivate growth</h5>
             <p>By setting constraints, we force ourselves..</p>
             <h5>About Shay</h5>
@@ -139,8 +141,189 @@
               <div class="speaker-info">
                   <img src="assets/images/speakers/russ-unger.jpg" alt="">
                   <ul>
-                    <li><a href="#">@shayhowe</a></li>  
-                    <li><a href="#">learn.shayhowe.com</a></li>
+                    <li><a href="#">@russ-unger</a></li>  
+                    <li><a href="#">learn.russung.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="maya-bruck" class="speaker">
+        <div class="col-2-3">
+            <h2>Maya Bruck</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/maya-bruck.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@mayabruck</a></li>  
+                    <li><a href="#">learn.mayab.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="jenn-downs" class="speaker">
+        <div class="col-2-3">
+            <h2>Jenn Downs</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/jenn-downs.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@jenndowns</a></li>  
+                    <li><a href="#">learn.jennd.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="tessa-harmon" class="speaker">
+        <div class="col-2-3">
+            <h2>Tessa Harmon</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/tessa-harmon.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@tessa-harmon</a></li>  
+                    <li><a href="#">learn.tessah.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="vitaly-friedman" class="speaker">
+        <div class="col-2-3">
+            <h2>Vitaly Friedman</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/vitaly-friedman.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@vitaly</a></li>  
+                    <li><a href="#">learn.vitaly.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="victoria-pater" class="speaker">
+        <div class="col-2-3">
+            <h2>Voctoria Pater</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/victoria-pater.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@victoriap</a></li>  
+                    <li><a href="#">learn.victoriap.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="darby-frey" class="speaker">
+        <div class="col-2-3">
+            <h2>darby frey</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/darby-frey.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@darbyf</a></li>  
+                    <li><a href="#">learn.darbyfrey.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="carolyn-chandler" class="speaker">
+        <div class="col-2-3">
+            <h2>Shay Howe</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/carolyn-chandler.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@carolynchandler</a></li>  
+                    <li><a href="#">learn.carolynchand.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="leslie-jensen-inman" class="speaker">
+        <div class="col-2-3">
+            <h2>leslie jensen</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/leslie-jensen-inman.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@lesliejensen</a></li>  
+                    <li><a href="#">learn.lesliejensen.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="estelle-weyl" class="speaker">
+        <div class="col-2-3">
+            <h2>Estelle Way</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/estelle-weyl.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@estelleway</a></li>  
+                    <li><a href="#">learn.estelle.com</a></li>
+                  </ul>
+              </div>
+        </aside>
+     </section>
+     <section id="zoe-mickley-gillenwater
+     " class="speaker">
+        <div class="col-2-3">
+            <h2>Zoe zoe-mickley-gillenwater</h2>
+            <h5>Less is More: how constraints cultivate growth</h5>
+            <p>By setting constraints, we force ourselves..</p>
+            <h5>About Shay</h5>
+            <p>As a designer and front-end developper, Shay</p>
+        </div><!--
+        --><aside class="col-1-3">
+              <div class="speaker-info">
+                  <img src="assets/images/speakers/zoe-mickley-gillenwater.jpg" alt="">
+                  <ul>
+                    <li><a href="#">@zoemick</a></li>  
+                    <li><a href="#">learn.zoemick.com</a></li>
                   </ul>
               </div>
         </aside>
