--- a/venue.html
+++ b/venue.html
@@ -10,9 +10,8 @@
     <section class="row-alt">
         <div class="lead container">
           <h1>Venue</h1>
-          <p>We are happy to welcome over twenty speakers to present
-            on the industry's latest technologies. Prepare for an inspiration
-            extragavanza
+          <p> Within the heart of downtown Douala. 
+            The Akwa theatre will provide a beautiful conference venue
           </p>
         </div>
       </section>
