--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2 >Dedicated to the craft of building websites</h2>
        <p>Every year the brightest web designers and front end developers descend on chicago descend
         in douala to discuss the latest technologies. Join us this August </p>
-        <a class="btn btn-alt" type="submit" name="submit" value="Purchase">Register Now</a>
+        <a class="btn btn-alt" href="register.html"type="submit" name="submit" value="Purchase">Register Now</a>
     </section>
     <section class="row">
         <div class="grid">
