--- a/venue.html
+++ b/venue.html
@@ -38,5 +38,17 @@
               </section>
         </div>
     </section>
+    <footer class="container primary-footer group">
+      <small>&copy; Styles Conference</small>
+      <nav class="nav">
+          <ul>
+              <li><a href="index.html">Home</a></li><!--
+              --><li><a href="speakers.html">Speakers</a></li><!--
+              --><li><a href="schedules.html">Schedule</a></li><!--
+             --><li><a href="venue.html">Venue</a></li><!--
+             --><li><a href="register.html">Register</a></li>
+          </ul>
+      </nav>
+  </footer>
 </body>
 </html>
