--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li><!--
                 --><li><a href="speakers.html">Speakers</a></li><!--
-                --><li><a href="schedule.html">Schedule</a></li><!--
+                --><li><a href="schedules.html">Schedule</a></li><!--
                --><li><a href="venue.html">Venue</a></li><!--
                --><li><a href="register.html">Register</a></li>
             </ul>
